access and refresh tokens work

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -194,6 +194,16 @@ top: 0;
     width: $aside-width;
 }
 
+.login-signup-buttons {
+    text-decoration: none;
+    &:hover {
+        color:rgb(0, 0, 0)
+    }
+    &:active {
+        text-decoration: underline;
+    }
+}
+
 // Main
 .main {
     width: 50%;
