added userId, placed in url, find user from url for profile page

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,5 +1,7 @@
 // General
-$main-color: rgb(8, 8, 8);
+$primary-color: #8d8bec;
+$hover-color: #817fee;
+$text-color: rgb(8, 8, 8);
 $main-background: rgb(252, 252, 252);
 
 // Aside
