--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import './variables.scss';
 
 // General
 
@@ -6,7 +6,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serifs;
     margin: 0px;
     background-color: $main-background;
-    color: $main-color;
+    color: $text-color;
 }
 
 .container {
@@ -15,22 +15,28 @@
     width: 100%;
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 562px;
+}
+
 .no-decoration {
     text-decoration: none;
-    color: $main-color;
+    color: $text-color;
 }
 
 .button {
     height: 30px;
     width: 50px;
     color: white;
-    background-color: rgb(86, 86, 252);
+    background-color: $primary-color;
     border: none;
-    border-radius: 5px;
+    border-radius: 20px;
     margin: 5px 0px;
     &:hover {
         cursor: pointer;
-        background-color: rgb(103, 103, 253);
+        background-color: $hover-color;
     }
     &:hover:active {
         background-color: rgb(65, 65, 233);
@@ -71,6 +77,10 @@ top: 0;
     &:active {
         text-decoration: underline;
     }
+}
+
+.relative {
+    position: relative;
 }
 
 // Post
@@ -141,8 +151,8 @@ top: 0;
 .feed-box {
     width: 550px;
     border-bottom: 1px solid lightgray;
-    padding: 5px;
-    margin-bottom: 20px;
+    padding: 10px 5px;
+    margin-bottom: 10px;
 }
 
 .feed-profile {
@@ -256,8 +266,9 @@ top: 0;
 .cover-photo {
     display: block;
     height: 250px; 
-    width: 500px;
+    width: 562px;
     background-color: rgb(143, 142, 142);
+    border-radius: 3px;
 }
 
 .pictures {
@@ -277,6 +288,7 @@ top: 0;
 .profile-name {
     font-size: 24px;
     margin-top: 5px;
+    margin-right: 20px;
 }
 
 .follow-box {
@@ -321,8 +333,17 @@ top: 0;
     padding-left: 5px;
 }
 
+.form-input-password {
+    outline: none;
+    border: none;
+    width: 170px;
+    height: 26px;
+    font-size: 15px;
+    padding-left: 5px;
+}
+
 .form-box {
-    height: 80vh;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -332,4 +353,12 @@ top: 0;
     height: 30px;
     width: 54px;
     font-size: 14px;
+}
+
+.show-icon {
+    position: absolute;
+    cursor: pointer;
+    height: 24px;
+    right: 4px;
+    top: 3.5px;
 }
