searchbar height and popup clear added

--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // General
-$primary-color: #8d8bec;
-$hover-color: #817fee;
+$primary-color: #817fec;
+$hover-color: #6e6ce9;
 $text-color: rgb(8, 8, 8);
 $main-background: rgb(252, 252, 252);
 
