--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -232,10 +232,28 @@ top: 0;
 }
 
 .searchbar {
-    width: 200px;
+    width: 175px;
     height: 26px;
     padding: 6px 12px;
     font-size: 16px;
+    border: none;
+    border-radius: 20px;
+    &:focus {
+        outline: none;
+        border: none;
+    }
+}
+
+.search-clear {
+    width: 16px;
+    color: #d3d3d3;
+    border-radius: 20px;
+}
+
+.searchbar-box {
+    width: 225px;
+    display: flex;
+    margin-left: 10px;
     border: 1px solid lightgray;
     border-radius: 20px;
     &:focus {
@@ -245,28 +263,34 @@ top: 0;
     }
 }
 
-.searchbar-box {
-    padding-left: 10px;
-}
-
 .search-results {
     margin: 3px 7px;
 }
 
 .search-results-box {
-    width: 225px;
-    height: 100px;
+    width: 250px;
+    padding: 6px 0px;
+    height: auto;
+    max-height: 232px;
     position: absolute;
     top: 8%;
     left: 5%;
-    z-index: 1;
     border: solid 1px lightgray;
     border-radius: 10px;
 }
 
+.search-popup-close {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    content: ' ';
+    background: rgba(0,0,0,.0);
+}
+
 .search-results-item {
-    padding: 2px 5px;;
-    margin-top: 6px;
+    padding: 2px 5px;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -276,6 +300,12 @@ top: 0;
     &:hover * {
         background-color: lightgray;
     }
+}
+
+.search-results-none {
+    margin: 5px 10px;
+    width: 150px;
+    color: rgb(104, 104, 104);
 }
 
 .search-profile-pic {
@@ -345,29 +375,43 @@ top: 0;
 
 .user-popup {
     visibility: hidden;
-    width: 120px;
-    color: #000;
-    text-align: center;
-    border-radius: 8px;
     border: 1px solid lightgray;
+    border-radius: 8px;
     padding: 8px 0;
     position: absolute;
-    z-index: 1;
     top: 88%;
     right: 5%;
   }
 
-  .down-arrow {
-    width: 13px;
-    margin-top: 2px;
+  .user-popup-content {
+    width: 120px;
+    color: #000;
+    text-align: center;
   }
 
-  .profile-button {
-    padding-bottom: 6px;
-    display: block;
-    width: 120px;
-    border-bottom: 1px solid lightgray
+  .user-popup-close {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    content: ' ';
+    background: rgba(0,0,0,.0);
   }
+
+
+.down-arrow {
+width: 13px;
+margin-top: 2px;
+}
+
+.profile-button {
+padding-bottom: 6px;
+display: block;
+width: 120px;
+border-bottom: 1px solid lightgray
+}
 
 // Main
 .main {
@@ -419,7 +463,7 @@ top: 0;
 
 .follow-button {
     height: 24px;
-    width: 60px;
+    width: 65px;
 }
 
 .profile-post-box {
