--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -53,7 +53,7 @@
 
 .input-border {
     border: 1px solid lightgray;
-    &:focus {
+    &:focus-within {
         outline: none;
         border: 2px solid rgb(110, 110, 110);
         border-radius: 2px;
@@ -92,7 +92,9 @@ top: 0;
 }
 
 .error {
-    color: rgb(224, 15, 15);
+    color: rgb(214, 15, 15);
+    display: flex;
+    justify-content: center;
 }
 
 // Post
@@ -568,6 +570,10 @@ border-bottom: 1px solid lightgray
 }
 
 // Login and Signup
+.signup-container {
+    margin: 80px 0px 0px 0px;
+}
+
 .form-item {
     padding: 5px 0px;
     font-size: 20px;
@@ -594,11 +600,12 @@ border-bottom: 1px solid lightgray
     padding-left: 5px;
 }
 
+.password-box {
+    width: 205px;
+}
+
 .form-box {
     height: 70vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .form-button {
