--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -92,9 +92,9 @@ top: 0;
 }
 
 .error {
+    font-size: 15px;
     color: rgb(214, 15, 15);
-    display: flex;
-    justify-content: center;
+    width: 245px;
 }
 
 // Post
@@ -571,7 +571,15 @@ border-bottom: 1px solid lightgray
 
 // Login and Signup
 .signup-container {
-    margin: 80px 0px 0px 0px;
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-container {
+    margin-top: 150px;
 }
 
 .form-item {
