--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -671,7 +671,6 @@ border-bottom: 1px solid lightgray
 
 // Upload Photo
 .uploadphoto-container {
-    height: 60vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -681,8 +680,42 @@ border-bottom: 1px solid lightgray
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 75%;
 }
 
 .uploadphoto-item {
     margin: 10px 0px;
 }
+
+.uploadphoto-popup-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 15%;
+    left: 35%;
+    z-index: 5;
+    height: 400px;
+    width: 400px;
+    border-radius: 10px;
+}
+
+.uploadphoto-popup-box {
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    z-index: 5;
+    border-radius: 10px;
+}
+
+.uploadphoto-popup-outer {
+    visibility: hidden;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    content: ' ';
+    background: rgba(0,0,0,.9);
+  }
