--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -155,6 +155,14 @@ top: 0;
     font-size: 14px;
 }
 
+.post-util-bar {
+    display: flex;
+}
+
+.post-util-item {
+    margin: 10px 20px 4px 5px;
+}
+
 // Feed Selector
 .feed-selector-container {
     display: flex;
