--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -204,8 +204,10 @@ top: 0;
 }
 
 .post-popup-box {
+    position: relative;
     border: 1px solid darkgray;
     border-radius: 5px;
+    z-index: 5;
 }
 
 .post-popup-close {
@@ -214,10 +216,12 @@ top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    background-color:rgb(0, 0, 0, 0.0)
+    background-color:rgb(0, 0, 0, 0.0);
+    z-index: 1;
 }
 
 .post-popup-item {
+    position: relative;
     color: rgb(224, 55, 55);
     padding: 5px 7px;
     border-radius: 5px;
