fixed comment loop

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -239,9 +239,8 @@ top: 0;
     height: auto;
     width: 550px;
     border: 1px solid lightgray;
-    padding: 7px 5px;
+    padding: 5px;
     border-radius: 20px;
-    margin: 10px 0px;
     max-height: 160px;
 }
 
